# nllpc

./: C15_M0.c  C15_m4.c  CMakeLists.txt  README.md
cm0/: CMakeLists.txt
cm4/: C15_m4.c  CMakeLists.txt
cm4/ld/: LPC4337_M4_LIB.ld
cmake/: toolchain-arm-eabi.cmake
ld/: LPC4337_M4_LIB.ld  LPC4337_M4_MEM.ld
lib/boards/: emphase_v5.c
lib/drv/: nl_dbg.c  nl_spi_dma.c
lib/espi/: nl_espi_adc.c  nl_espi_io.c
lib/spibb/: nl_bb_msg.c  nl_bb_msg.h
lib/tcd/: nl_tcd_msg.c  nl_tcd_msg.h  nl_tcd_param_work.c  nl_tcd_param_work.h  nl_tcd_poly.c  nl_tcd_poly.h  nl_tcd_valloc.c
lib/usb/: nl_usb_midi.c
nl_lib/nl_lib_com/drv/: nl_dbg.c  nl_dbg.h
nl_lib/nl_lib_com/spibb/: nl_bb_msg.c  nl_bb_msg.h
nl_lib/nl_lib_com/tcd/: nl_tcd_adc_work.c  nl_tcd_adc_work.h  nl_tcd_env.c  nl_tcd_env.h  nl_tcd_msg.c  nl_tcd_msg.h  nl_tcd_param_work.h  nl_tcd_poly.c  nl_tcd_poly.h
nl_lib/nl_lib_com/usb/: nl_usb_midi.h
nl_lib/nl_lib_m0/: .cproject  liblinks.xml
nl_lib/nl_lib_m4/: .cproject  liblinks.xml
openocd/: nonlinear-lpc.cfg
